--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ffmpeg/ffmpeg": "^0.7.0",
     "ace-builds": "^1.4.12",
     "audiobuffer-to-wav": "^1.0.0",
+    "axios": "^1.4.0",
     "base64-arraybuffer": "^0.2.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
